--- a/front/package.json
+++ b/front/package.json
@@ -8,13 +8,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@hookform/error-message": "^2.0.0",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/material": "^5.0.0-rc.1",
+    "@mui/styled-engine-sc": "^5.0.0-rc.1",
     "axios": "^0.26.1",
+    "mui": "^0.0.1",
+    "mui-datatables": "^4.2.2",
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.29.0",
-    "recoil": "^0.6.1"
+    "recoil": "^0.6.1",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/node": "17.0.10",
